--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,17 @@ h1{
 .forms button{
   background: green;
 }
+
+.list{
+  display: flex;
+  flex-wrap: wrap;
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+
+  justify-content: center;
+}
+
+.list li {
+  margin: 10px;
+}
