--- a/src/App.css
+++ b/src/App.css
@@ -1,164 +1,32 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap");
-
-* {
-  font-family: "Source Sans Pro", sans-serif;
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style-type: none;
-  outline: none;
-}
-
-html {
-  font-size: 62.5%;
-}
-
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-h1 {
-  font-size: 8rem;
-  letter-spacing: 0.1rem;
-  font-style: normal;
-  color: #40b48e;
-  text-shadow: 0 0.2rem 5rem rgb(119, 115, 115);
-  text-transform: lowercase;
-  margin: 4rem 0;
-}
-
-.search-form {
-  width: 60rem;
-  height: 10rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #d3d3d3;
-  border-radius: 0.5rem;
-  margin-bottom: 5rem;
-  box-shadow: 1rem 2rem 5rem #aaa;
-  position: relative;
-}
-
-.alert {
-  position: absolute;
-  top: -3rem;
-  left: 0;
-  background-color: rgb(72, 128, 233);
-  width: calc(100% - 0.4rem);
-  border-radius: 0.5rem;
-  padding: 0.2rem;
-}
-
-.alert h3 {
-  font-size: 1.8rem;
-  color: #fff;
-  font-weight: 400;
-  text-transform: uppercase;
   text-align: center;
 }
 
-.search-form input {
-  font-size: 1.6rem;
-  border: none;
-  border-bottom: 0.1rem solid #ccc;
-  margin: 0 0.5rem;
-  border-radius: 0.5rem;
-  height: 3rem;
-}
 
-.search-form input[type="text"] {
-  padding: 0 0.5rem;
-  width: 60%;
-  color: #555;
-}
 
-.search-form input[type="submit"] {
-  width: 25%;
-  text-transform: uppercase;
-  background-color: #40b48e;
-  color: #fff;
-}
-
-.recipes {
-  width: 90%;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.recipe {
-  width: 30rem;
-  margin: 3rem;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: #d3d3d3;
-  padding: 2rem;
-  position: relative;
-  border-radius: 0.5rem;
-  box-shadow: 2rem 3rem 5rem #aaa;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.recipe h2 {
-  background-color: rgba(161, 161, 161, 0.7);
-  border-radius: 0.5rem;
-  padding: 0.3rem 0.5rem;
-  position: absolute;
-  top: 2.5rem;
-  left: 2.5rem;
-  right: 2.5rem;
-  font-size: 2.5rem;
-  font-weight: 400;
-  text-shadow: 0 0.5rem 0.5rem #555;
-  color: #fff;
+.App-link {
+  color: #61dafb;
 }
 
-.recipe img {
-  border-radius: 0.5rem;
-  object-fit: cover;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-.recipe a {
-  font-size: 1.8rem;
-  color: #40b48e;
-}
-
-.recipe button {
-  font-size: 2rem;
-  text-transform: uppercase;
-  color: #fff;
-  background-color: #40b48e;
-  border: none;
-  border-radius: 0.5rem;
-  height: 3rem;
-}
-
-.ingredient-list {
-  margin-top: 1rem;
-  background-color: #f0f0f0;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-}
-
-
-.ingredient-list li {
-  margin: 0.5rem 0;
-}
-
-.ingredient-text {
-  font-size: 1.5rem;
-  color: #888;
-}
-
-.ingredient-weight {
-  color: #40b48e;
-  font-size: 1.3rem;
-}
-
 
 Link a {
   display: flex;
@@ -175,7 +43,6 @@ h1{
   color: green;
 
 }
-
 .forms{
   display: flex;
   justify-content: center;
@@ -184,19 +51,10 @@ h1{
   
 
 }
-
 .forms button{
   background: green;
 }
 
-
-
-
-.forms button{
-  background: green;
-}
-
-<<<<<<< HEAD
 .list{
   display: flex;
   flex-wrap: wrap;
@@ -210,5 +68,3 @@ h1{
 .list li {
   margin: 10px;
 }
-/* ======= */
-/* >>>>>>> 5d05b9f76c8fc8b5c22ffbd8be9a8de3c9d4efc4 */
