modified css file

--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,10 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #d3d3d3;
+  background-color: #d10c0c;
   border-radius: 0.5rem;
   margin-bottom: 5rem;
-  box-shadow: 1rem 2rem 5rem #aaa;
+  box-shadow: 1rem 2rem 5rem rgb(228, 3, 3);
   position: relative;
 }
 
@@ -46,7 +46,7 @@ h1 {
   position: absolute;
   top: -3rem;
   left: 0;
-  background-color: rgb(225, 39, 231);
+  background-color: rgb(45, 231, 39);
   width: calc(100% - 0.4rem);
   border-radius: 0.5rem;
   padding: 0.2rem;
@@ -63,7 +63,7 @@ h1 {
 .search-form input {
   font-size: 1.6rem;
   border: none;
-  border-bottom: 0.1rem solid rgb(4, 37, 145);
+  border-bottom: 0.1rem solid rgb(5, 23, 82);
   margin: 0 0.5rem;
   border-radius: 0.5rem;
   height: 3rem;
@@ -72,7 +72,7 @@ h1 {
 .search-form input[type="text"] {
   padding: 0 0.5rem;
   width: 60%;
-  color: rgb(197, 102, 102);
+  color: rgb(233, 17, 17);
 }
 
 .search-form input[type="submit"] {
@@ -167,7 +167,7 @@ Link a {
 .us{
   display: inline;
   font-size: large;
-  background-color: #61dafb;
+  background-color: #0cb9e9;
 }
 h1{
   text-align: center;
